# nagnu

./: .gitignore  CHANGELOG  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  nagnu.conf.sample
docs/: nagnu.8
src/: arguments.c  arguments.h  excludes.c  excludes.h  getconf.c  getconf.h  getopt.c  nagnu.c  nagnu.h
